# task-cyberproctect

./: CMakeLists.txt  README.md  clean.sh  docker-compose.yml  launch.sh  main.cpp
client/: CMakeLists.txt  Dockerfile.client  client.cpp  client.hpp
server/: CMakeLists.txt  Dockerfile.server  process_monitor.service  server.cpp  server.hpp
